--- a/integrasjonspunkt-service.yaml
+++ b/integrasjonspunkt-service.yaml
@@ -2,18 +2,22 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.16.0 ()
   creationTimestamp: null
   labels:
-    io.kompose.service: integrasjonspunkt
   name: integrasjonspunkt
 spec:
+  selector:
+    app: integrasjonspunkt
   ports:
-  - name: "9094"
+  - name: "tcp9094"
+    protocol: TCP
     port: 9094
     targetPort: 9094
-  selector:
-    io.kompose.service: integrasjonspunkt
-status:
-  loadBalancer: {}
+  type: LoadBalancer
+  loadBalancerIP: 35.228.172.189
+  loadBalancerSourceRanges:
+  - 40.115.18.169/32
+  - 40.68.26.84/32
+  - 213.236.148.83/32
+  - 195.159.162.32/27
+  - 195.159.248.98/32
