--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,6 +19,6 @@ pipelines:
           - envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
           - *registryLogin
           - IMAGE_NAME=${DOCKER_REGISTRY}/app/integrasjonspunkt
-          - docker build . -t ${IMAGE_NAME} -f Dockerfile
+          - docker build . -t ${IMAGE_NAME} -f docker/Dockerfile
           - docker push ${IMAGE_NAME}
 
