Korrigering på Healthcheck. La til motd

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,13 +10,16 @@ RUN apt-get update && apt-get install -yq openssh-server nano
 ADD docker/sshd_config /etc/ssh/sshd_config
 RUN echo "root:Docker!" | chpasswd 
 ADD docker/services.d /etc/services.d
+ADD docker/motd /etc/motd
 
 ARG PORT=80
 ENV PORT=${PORT} SSH_PORT=2222 TZ="Europe/Oslo"
 ADD integrasjonspunkt-local.properties /opt/integrasjonspunkt/integrasjonspunkt-local.properties
 
+
 # Opprydding
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 EXPOSE 2222 80
-HEALTHCHECK &{["CMD-SHELL" "curl -s --fail http://localhost:${PORT}/manage/health > /dev/null || exit 1"] "0s" "0s" "0s" '\x00'}
+HEALTHCHECK --interval=5m --timeout=3s \
+    CMD curl -f http://localhost:${PORT}/manage/health || exit 1
 ENTRYPOINT ["/init"]
