--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,7 @@ RUN echo "root:Docker!" | chpasswd
 ADD docker/services.d /etc/services.d
 ADD docker/motd /etc/motd
 
-ARG PORT=80
+ARG PORT=9093
 ENV PORT=${PORT} SSH_PORT=2222 TZ="Europe/Oslo"
 ADD integrasjonspunkt-local.properties /opt/integrasjonspunkt/integrasjonspunkt-local.properties
 
@@ -20,8 +20,8 @@ ADD integrasjonspunkt-local.properties /opt/integrasjonspunkt/integrasjonspunkt-
 # Opprydding
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* && \
     mkdir -p /opt/integrasjonspunkt/activemq-data /opt/integrasjonspunkt/messages /opt/integrasjonspunkt/uploads
-EXPOSE 2222 80
+EXPOSE 2222 9093
 HEALTHCHECK --interval=5m --timeout=3s \
-    CMD curl -f http://localhost:${PORT}/manage/health || exit 1
+    CMD curl -f http://localhost:9093/manage/health || exit 1
 
 ENTRYPOINT ["/init"]
