--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,8 +15,8 @@ ADD docker/motd /etc/motd
 ARG PORT=9093
 ENV PORT=${PORT} SSH_PORT=2222 TZ="Europe/Oslo"
 ADD integrasjonspunkt-local.properties /opt/integrasjonspunkt/integrasjonspunkt-local.properties
-RUN mkdir -p /opt/integrasjonspunkt/activemq-data /opt/integrasjonspunkt/messages /opt/integrasjonspunkt/uploads && \
-    chown -R java:java /opt/integrasjonspunkt
+RUN mkdir -p /opt/integrasjonspunkt/activemq-data /opt/integrasjonspunkt/messages /opt/integrasjonspunkt/uploads /opt/keystore && \
+    chown -R java:java /opt/integrasjonspunkt /opt/keystore
 
 
 # Opprydding
