--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,7 +17,16 @@ pipelines:
           - docker
         script:
           - envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
-          - cat integrasjonspunkt-local.properties
+          - echo "Laster ned Virksomhetssertifikat offentlig nøkkel"
+          - pipe: microsoft/azure-cli-run:1.1.0
+            variables:
+              AZURE_APP_ID: $AZURE_SP_ID
+              AZURE_PASSWORD: $AZURE_SP_SECRET
+              AZURE_TENANT_ID: $AZURE_TENANT_ID
+              CLI_COMMAND: az keyvault secret download --encoding base64 --file dibk-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
+          - empty=
+          - openssl pkcs12 -in dibk-auth.p12 -passin pass:$empty -pubkey -out auth.pksc12 -name ${KEYSTORE_ALIAS} -passout pass:${KEYSTORE_PASS} -noiter -nomaciter
+
           - *registryLogin
           - IMAGE_NAME=${DOCKER_REGISTRY}/app/integrasjonspunkt
           - docker build . -t ${IMAGE_NAME} -f docker/Dockerfile
