--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,7 +15,7 @@ pipelines:
           - docker
         script:
           - envsubst < "integrasjonspunkt-local.properties.dist" > "integrasjonspunkt-local.properties"
-          - echo "Laster ned Virksomhetssertifikat offentlig nøkkel"
+          - echo "Laster ned Virksomhetssertifikat"
           - pipe: microsoft/azure-cli-run:1.1.0
             variables:
               AZURE_APP_ID: $AZURE_SP_ID
@@ -23,6 +23,7 @@ pipelines:
               AZURE_TENANT_ID: $AZURE_TENANT_ID
               CLI_COMMAND: az keyvault secret download --encoding base64 --file dibk-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
           - empty=
+          - echo "Henter ut offentlig nøkkel"
           - openssl pkcs12 -in dibk-auth.p12 -passin pass:$empty -clcerts -nokeys -out auth.pkcs12 -name ${KEYSTORE_ALIAS} -passout pass:${KEYSTORE_PASS} -noiter -nomaciter
           - *registryLogin
           - IMAGE_NAME=${DOCKER_REGISTRY}/app/integrasjonspunkt
