--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -27,6 +27,6 @@ pipelines:
           - openssl pkcs12 -in dibk-auth.p12 -passin pass:$empty -clcerts -nokeys -out auth.pkcs12 -name ${KEYSTORE_ALIAS} -passout pass:${KEYSTORE_PASS} -noiter -nomaciter
           - *registryLogin
           - IMAGE_NAME=${DOCKER_REGISTRY}/app/integrasjonspunkt
-          - docker build . -t ${IMAGE_NAME} -f docker/Dockerfile
+          - docker build . -t ${IMAGE_NAME} --build-arg profile=${APP_ENV} -f docker/Dockerfile
           - docker push ${IMAGE_NAME}
 
