--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,8 +23,9 @@ pipelines:
               AZURE_TENANT_ID: $AZURE_TENANT_ID
               CLI_COMMAND: az keyvault secret download --encoding base64 --file dibk-auth.p12 --name ${AZURE_KV_CERT_NAME} --vault-name ${AZURE_KV_NAME}
           - empty=
-          - echo "Henter ut offentlig nøkkel"
-          - openssl pkcs12 -in dibk-auth.p12 -passin pass:$empty -clcerts -nokeys -out auth.pkcs12 -name ${KEYSTORE_ALIAS} -passout pass:${KEYSTORE_PASS} -noiter -nomaciter
+          - echo "Eksporterer til pkcs12 keystore"
+          - openssl pkcs12 -in dibk-auth.p12 -passin pass:$empty -nodes -out dibk-auth.pem
+          - openssl pkcs12 -export -in dibk-auth.pem -out auth.pkcs12 -passout pass:${KEYSTORE_PASS} -name dibk -noiter -nomaciter
           - *registryLogin
           - IMAGE_NAME=${DOCKER_REGISTRY}/app/integrasjonspunkt
           - docker build . -t ${IMAGE_NAME} --build-arg profile=${APP_ENV} -f docker/Dockerfile
