Korrigering av alias

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -25,7 +25,7 @@ pipelines:
           - empty=
           - echo "Oppretter passord på sertifikatet"
           - openssl pkcs12 -in dibk-auth.p12 -passin pass:$empty -nodes -out dibk-auth.pem
-          - openssl pkcs12 -export -in dibk-auth.pem -out auth.p12 -passout pass:${KEYSTORE_PASS}
+          - openssl pkcs12 -export -in dibk-auth.pem -out auth.p12 -passout pass:${KEYSTORE_PASS} -name ${KEYSTORE_ALIAS}
           - *registryLogin
           - IMAGE_NAME=${DOCKER_REGISTRY}/app/integrasjonspunkt
           - docker build . -t ${IMAGE_NAME} --build-arg profile=${APP_ENV} --build-arg KEYSTORE_PASS=${KEYSTORE_PASS} --build-arg KEYSTORE_ALIAS=${KEYSTORE_ALIAS} -f docker/Dockerfile
